@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2004/02/22 23:27:19 xtraeme Exp $
+$NetBSD: distinfo,v 1.5 2004/06/03 23:02:24 xtraeme Exp $
 
-SHA1 (bitlbee-0.84.tar.gz) = f771830c6e42568210e167d5f474d5d1b1274040
-Size (bitlbee-0.84.tar.gz) = 473930 bytes
+SHA1 (bitlbee-0.90.tar.gz) = 18e4daf9f3efe0d3514635398e015612cb6eb924
+Size (bitlbee-0.90.tar.gz) = 433321 bytes
